# mario-kart-gl

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
shaders/: itembox.frag  itembox.vert  texture.frag  texture.vert  triangles.frag  triangles.vert
